FIx mascot on iphone devices

--- a/assets/css/about-us.css
+++ b/assets/css/about-us.css
@@ -772,7 +772,7 @@
     }
 
     .section_space_btm_lg {
-        padding-bottom: 21px;
+        padding-bottom: 31px;
     }
 
     .cta_home {
