--- a/assets/css/home-custom.css
+++ b/assets/css/home-custom.css
@@ -66,8 +66,11 @@
 
 .testimonial-deco-item {
     position: absolute;
-    top: -15%;
-    left: -8%;
+    margin-top: -6%;
+    margin-left: -9%;
+    z-index: 1;
+    /* top: -15%;
+    left: -8%; */
 }
 
 .site-footer-logo {
@@ -231,9 +234,22 @@
 
     .testimonial-deco-item {
         position: absolute;
-        /* top: -7%;
-        left: -12%;
-        z-index: 50; */
+        margin-left: -15px;
+        transform: rotate(36deg);
+    }
+
+    .deco-item-mascot-1 {
+        position: absolute;
+        top: 4.5%;
+        right: -20%;
+        z-index: 1;
+        transform: rotate(-36deg);
+    }
+
+    .deco-item-mascot-2 {
+        position: absolute;
+        margin-left: -42px;
+        z-index: 1;
         transform: rotate(36deg);
     }
 
